--- a/FanPage/index.html
+++ b/FanPage/index.html
@@ -19,7 +19,7 @@ More info on CSS: https://www.w3schools.com/css/default.asp
             <div id = "contentContainer">
                 <h1> Game of Thrones </h1>
                 <hr>
-                <p> Information about your favorite characters </p>
+                <p> Click to se information about your favorite characters </p>
                      <div class = "row">
                            <div class="column">
                                 <a href="jonsnow.html">
@@ -52,12 +52,37 @@ More info on CSS: https://www.w3schools.com/css/default.asp
                     <iframe width="728" height="409" src="https://www.youtube.com/embed/wA38GCX4Tb0" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
+                <h1> Dank Memes </h1>
+                <div class="row">
+                    <div class="center">
+                        <img src="images/meme1.jpg" alt="1">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="center">
+                        <img src="images/meme2.jpg" alt="2">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="center">
+                        <img src="images/meme3.jpg" alt="3">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="center">
+                        <img src="images/meme5.jpg" alt="5">
+                    </div>
+                  </div>
+
+                <div class="row">
+                    <div class="center">
+                        <img src="images/meme4.jpg" alt="4">
+                    </div>
+		    </div>
             </div>
         </div>
 	</body>
-
-
 </html>
-
-
-
