--- a/FanPage/jonsnow.html
+++ b/FanPage/jonsnow.html
@@ -14,8 +14,29 @@
         <div id = "mainContainer">
             <div id = "contentContainer">
                 <a href="index.html">
-                    <h3> Back </h3>
+                    <button class="button"> <--Back </button>
                 </a>
+                <div class="row">
+               <img src="images/JS.jpg" alt="Snow" width="870" height="470">
+               </div>
+                <h1>Character</h1>
+                <p>Jon Snow, born Aegon Targaryen, is the son of Lyanna Stark and Rhaegar Targaryen, the late Prince of Dragonstone. After successfully capturing a wight and presenting it to the Lannisters as proof to the Army of the Dead are real, Jon pledges himself and his army to Daenerys Targaryen.</p>
+                <a herf = "https://gameofthrones.fandom.com/wiki/Jon_Snow"> <h5>Main source: Wikia</h5> </a>
+
+                <h1>Jon Snow History and Info</h1>
+                <div align="center">
+                    <h5>Part 1</h5>
+                </div>
+                <div align="center">
+                    <iframe width="660" height="415" src="https://www.youtube.com/embed/MFf_bGjnwvo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+                <div align="center">
+                    <h5>Part 2</h5>
+                </div>
+                <div align="center">
+                    <iframe width="660" height="415" src="https://www.youtube.com/embed/kfSJAN_CcYo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
 
             </div>
         </div>
@@ -23,4 +44,3 @@
 
 
 </html>
-
