--- a/FanPage/index.html
+++ b/FanPage/index.html
@@ -19,7 +19,7 @@ More info on CSS: https://www.w3schools.com/css/default.asp
             <div id = "contentContainer">
                 <h1> Game of Thrones </h1>
                 <hr>
-                <p> Click to se information about your favorite characters </p>
+                <p> Click to see information about your favorite characters </p>
                      <div class = "row">
                            <div class="column">
                                 <a href="jonsnow.html">
