--- a/Game_1/index.html
+++ b/Game_1/index.html
@@ -10,6 +10,6 @@
     <script src="../addons/p5.sound.min.js"></script> -->
     <script src="JS/sketch.js"></script>
   </head>
-  <body>
-  </body>
+ <body style="background-color:#800000;">
+</body>
 </html>
