--- a/Interactive Narrative/index.html
+++ b/Interactive Narrative/index.html
@@ -57,7 +57,7 @@
     <script src="JS/p5.dom.min.js"></script>
     <script src="JS/p5.dom.js"></script>
     <script src="JS/p5.sound.min.js"></script>
-    <script src="js/sketch.js"></script>
+    <script src="JS/sketch.js"></script>
   </head>
  <body>
 </body>
